# LlamaSocialImpact

./: .gitignore  README.md  example_documents.txt
backend/: .env_example  app.py  automated_health_calls.py  call_routes.py  pdf_reader.py  plan_process_types.py  pyproject.toml  together_ai.py
backend/checkups/: admin.py  apps.py  models.py  serializers.py  services.py  utils.py  views.py
backend/checkups/migrations/: 0001_initial.py  0002_remove_patient_plan_pdf_url_patient_phone_and_more.py  0002_remove_patient_plan_pdf_url_patient_plan_text.py
backend/checkups/templates/: base.html  call_plan.njk
backend/checkups/templates/checkups/: list.html
backend/core/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend-app/: next.config.ts  package-lock.json  package.json
frontend-app/src/: breadcrumb-path.tsx
frontend-app/src/app/: layout.tsx
frontend-app/src/app/intake/: page.tsx  patient-form.tsx
frontend-app/src/app/patients/: module-popup.tsx
frontend-app/src/app/patients/[patientId]/profile/: page.tsx  patient-checkups.tsx
frontend-app/src/app/profile/: page.tsx
frontend-app/src/components/: app-sidebar.tsx
frontend-app/src/components/calendar/: calendar-view.tsx
frontend-app/src/components/profile/: profile-card.tsx
frontend-app/src/components/ui/: badge.tsx
frontend-app/src/data/: use-create-patient.ts  use-patient-checkups.ts  use-patients.ts  use-update-module.ts
frontend-app/src/types/: calendar.ts  profile.ts
frontend/src/: App.tsx
