[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Max Dillon <maxdillon13124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
pydantic = "^2.9"
together = "^1.3"
python-dotenv = "^1.0"
vapi-server-sdk = "^0.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
